--- a/requirements.txt
+++ b/requirements.txt
@@ -57,4 +57,4 @@ cloudscraper
 pycryptodome
 opencv-python
 bing_image_downloader
-https://github.com/Badmunda50/Pyroi
+git+https://github.com/Badmunda50/Pyroi
